[package]
name = "frogc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
fs2 = "0.4.3"
log = "0.4.29"
env_logger = "0.11.8"
nix = { version = "0.30.1", features = ["sched", "mount", "fs", "signal", "hostname"] }
